--- a/XamlBrewer.UWP.IEXCloud.Sample/Views/Shell.xaml
+++ b/XamlBrewer.UWP.IEXCloud.Sample/Views/Shell.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="XamlBrewer.UWP.IEXCloud.Sample.MainPage"
+﻿<Page x:Class="XamlBrewer.UWP.IEXCloud.Sample.Shell"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:local="using:XamlBrewer.UWP.IEXCloud.Sample"
@@ -26,26 +26,29 @@
                HorizontalAlignment="Center"
                VerticalAlignment="Center" />
 
-        <winui:NavigationView x:Name="navigationView"
+        <winui:NavigationView x:Name="NavigationView"
+                              Header="My stocks"
                               IsBackButtonVisible="Collapsed" 
                               Background="Transparent"
-                              AllowFocusOnInteraction="False">
+                              AllowFocusOnInteraction="False"
+                              ItemInvoked="NavigationView_ItemInvoked">
 
             <winui:NavigationView.MenuItems>
                 <winui:NavigationViewItem Icon="Play"
                                           Content="Menu Item1"
-                                          Tag="SamplePage1" />
+                                          Tag="XamlBrewer.UWP.IEXCloud.Sample.Views.Page1" />
                 <winui:NavigationViewItem Icon="Save"
                                           Content="Menu Item2"
-                                          Tag="SamplePage2" />
+                                          Tag="XamlBrewer.UWP.IEXCloud.Sample.Views.Page2" />
                 <winui:NavigationViewItem Icon="Refresh"
                                           Content="Menu Item3"
-                                          Tag="SamplePage3" />
+                                          Tag="XamlBrewer.UWP.IEXCloud.Sample.Views.Page3" />
                 <winui:NavigationViewItem Icon="Download"
                                           Content="Menu Item4"
-                                          Tag="SamplePage4" />
+                                          Tag="XamlBrewer.UWP.IEXCloud.Sample.Views.Page4" />
             </winui:NavigationView.MenuItems>
-            <Frame x:Name="contentFrame" />
+            <Frame x:Name="ContentFrame" 
+                   Padding="6 0"/>
         </winui:NavigationView>
 
         <!-- XAML Brewer Logo -->
