--- a/XamlBrewer.UWP.IEXCloud.Sample/Views/NewsPage.xaml
+++ b/XamlBrewer.UWP.IEXCloud.Sample/Views/NewsPage.xaml
@@ -2,33 +2,51 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:local="using:XamlBrewer.UWP.IEXCloud.Sample.Views"
+      xmlns:winui="using:Microsoft.UI.Xaml.Controls"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d"
       Background="Transparent">
-
-    <Grid Background="Transparent">
-        <Grid x:Name="ContentGrid"
-              VerticalAlignment="Top"
-              HorizontalAlignment="Left"
-              Background="Transparent"
-              Margin="0">
-            <ListBox x:Name="NewsItems"
-                     Margin="0 0 20 20"
-                     Background="Transparent">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel>
-                            <TextBlock><Hyperlink NavigateUri="{Binding url}"><Run Text="{Binding source}" /></Hyperlink></TextBlock>
-                            <TextBlock Text="{Binding headline}"
-                                       FontWeight="SemiBold"
-                                       TextWrapping="WrapWholeWords" />
-                            <TextBlock Text="{Binding summary}"
-                                       TextWrapping="WrapWholeWords" />
-                        </StackPanel>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
-        </Grid>
-    </Grid>
+    <winui:ScrollViewer VerticalScrollBarVisibility="Auto"
+                        VerticalScrollMode="Enabled"
+                        HorizontalScrollMode="Disabled"
+                        Grid.Row="2">
+        <winui:ItemsRepeater x:Name="NewsItems"
+                             Margin="0 0 20 20"
+                             HorizontalAlignment="Stretch"
+                             VerticalAlignment="Stretch">
+            <winui:ItemsRepeater.Layout>
+                <winui:StackLayout Orientation="Vertical"
+                                   Spacing="20" />
+            </winui:ItemsRepeater.Layout>
+            <winui:ItemsRepeater.ItemTemplate>
+                <DataTemplate>
+                    <RelativePanel>
+                        <TextBlock x:Name="Headline"
+                                   Text="{Binding headline}"
+                                   FontWeight="SemiBold"
+                                   TextWrapping="WrapWholeWords"
+                                   Margin="0 0 0 10" />
+                        <Image x:Name="Image"
+                               Source="{Binding image}"
+                               RelativePanel.Below="Headline"
+                               RelativePanel.AlignLeftWith="Headline"
+                               Width="180"
+                               Stretch="Uniform" />
+                        <TextBlock x:Name="Summary"
+                                   Text="{Binding summary}"
+                                   RelativePanel.RightOf="Image"
+                                   RelativePanel.AlignTopWith="Image"
+                                   TextWrapping="WrapWholeWords"
+                                   Margin="20 0 0 0" />
+                        <TextBlock x:Name="Source"
+                                   RelativePanel.Below="Summary"
+                                   RelativePanel.AlignLeftWith="Summary"
+                                   Margin="20 0 0 0"
+                                   VerticalAlignment="Top"><Hyperlink NavigateUri="{Binding url}"><Run Text="{Binding source}" /></Hyperlink></TextBlock>
+                    </RelativePanel>
+                </DataTemplate>
+            </winui:ItemsRepeater.ItemTemplate>
+        </winui:ItemsRepeater>
+    </winui:ScrollViewer>
 </Page>
