--- a/XamlBrewer.UWP.IEXCloud.Sample/Views/SettingsPage.xaml
+++ b/XamlBrewer.UWP.IEXCloud.Sample/Views/SettingsPage.xaml
@@ -25,7 +25,8 @@
                         Background="GhostWhite"
                         Shadow="{StaticResource SharedShadow}"
                         Padding="20"
-                        Margin="0 0 20 20">
+                        Margin="0 0 20 20"
+                        CornerRadius="2">
                 <TextBlock Text="Your IEX Cloud Account"
                            FontWeight="SemiBold"
                            Margin="0 0 0 20" />
@@ -57,7 +58,8 @@
                             Background="GhostWhite"
                             Shadow="{StaticResource SharedShadow}"
                             Padding="20"
-                            Margin="0 0 20 20">
+                            Margin="0 0 20 20"
+                            CornerRadius="2">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
