History page: chart track ball restyle

--- a/XamlBrewer.UWP.IEXCloud.Sample/App.xaml
+++ b/XamlBrewer.UWP.IEXCloud.Sample/App.xaml
@@ -13,6 +13,8 @@
             </ResourceDictionary.MergedDictionaries>
             <!-- Other app resources here -->
             <Color x:Key="SystemAccentColor">RosyBrown</Color>
+            <SolidColorBrush x:Key="SystemAccentColorBrush"
+                             Color="{StaticResource SystemAccentColor}" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
